--- a/Cssfiles/homeresponsive.css
+++ b/Cssfiles/homeresponsive.css
@@ -203,44 +203,11 @@ margin-left: 100px;
       #container3 div:nth-child(2) a{
         font-size: 25px;
        }
-       footer {
-        height:auto;
-        width: 130vh;
-       justify-content: space-around;
-       flex-direction: column;
-       align-items: flex-start;
-    }
-    .footerimage {
-        height: 50vh;
-        width: 120vh;
-        border-top-left-radius: 100%;
-        background-image: url('../images/footerimage.jpeg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 50%;
-    }
-    .addressheading{
-        font-size: 30px;
-    }
-    .address{
-        height:auto;
-   
-    }
-    .address p{
-        font-size: 20px;
-        margin-top:30px;
-    }
-    .social-media {
-        margin-top: 20px;
-        height:auto
-    }
-    .social-media p{
-        font-size: 20px;
-    }
-   
+    
 }
 
 @media (min-width: 320px) and (max-width:480px) {
+  
     .hamburg{
         display:block;
       }
@@ -349,41 +316,14 @@ margin-left: 100px;
    
         height:200px;
       }
-    footer {
-        height:auto;
+      footer {
+        height: 300px;
         width: 130vh;
-       justify-content: space-around;
-       flex-direction: column;
-       align-items: flex-start;
-    }
-    .footerimage {
-        height: 50vh;
-        width: 120vh;
-        border-top-left-radius: 100%;
-        background-image: url('../images/footerimage.jpeg');
-        background-repeat: no-repeat;
-        background-size: cover;
-        background-position: 50%;
-    }
-    .addressheading{
-        font-size: 30px;
-    }
-    .address{
-        height:auto;
-   
-    }
-    .address p{
-        font-size: 20px;
-        margin-top:30px;
-    }
-    .social-media {
-        margin-top: 20px;
-        height:auto
-    }
-    .social-media p{
-        font-size: 20px;
+        margin-top: 100px;
+        display: flex;
+        align-items: center;
+        background-color: #F1F1F1;
     }
    
- 
   
 }
