--- a/Cssfiles/shopstyles.css
+++ b/Cssfiles/shopstyles.css
@@ -127,3 +127,100 @@ background-color: #83AE45;
 color:white;
 }
 
+/* responsive css-- starts */
+@media (min-width: 1025px) and (max-width:1127px) {
+    .productcard {
+        width: 30%;
+        height:60vh;
+        margin: 20px auto;
+    }
+    .desc {
+        text-align: center;
+        font-size: 12px;
+    }
+   
+}
+
+@media (min-width: 769px) and (max-width:1024px) {
+    .desc {
+        text-align: center;
+        font-size: 12px;
+    }
+     .productcard {
+        width: 40%;
+        height:60vh;
+        margin: 20px auto;
+    }
+    .category1-heading, .category2-heading {
+        margin-left: 80px;
+    }
+
+}
+
+
+
+@media (min-width: 481px) and (max-width:768px) {
+    .shopoverlay {
+      width:160vh;
+    }
+    .shop-container1 img{
+        width:160vh;
+    }
+    .products-container {
+        width: 130vh;
+        margin-left: 60px;
+        display: flex;
+        align-items: center;
+        justify-content: space-around;
+    }
+    .price-quantity p {
+        margin: 0 15px;
+  
+    }
+    .categorybar {
+        width: 160vh;
+    }
+    .category1-heading, .category2-heading {
+        margin-left: 150px;
+    }
+    .shopfooter{
+        width: 130vh;
+    }
+  
+    
+
+}
+
+
+
+
+
+@media (min-width: 320px) and (max-width:480px) {
+ 
+    .shopoverlay {
+      width:130vh;
+    }
+    .shop-container1 img{
+        width:130vh;
+    }
+    .categorybar {
+       width:130vh;
+    }
+    .category1-products, .category2-products {
+        width:130vh;
+    }
+    .products-container {
+       flex-direction: wrap;
+    }
+    .productcard {
+        width: 40%;
+        height:60vh;
+        margin: 20px auto;
+    }
+    .category1-heading, .category2-heading {
+       text-align: center;
+        margin-left:0px;
+        margin-bottom: 10px;
+    }
+}
+
