--- a/Cssfiles/cartliststyle.css
+++ b/Cssfiles/cartliststyle.css
@@ -7,44 +7,57 @@
 }
 
 .headingcart{
-margin-top: 100px;
+margin-top: 130px;
 text-align: center;
 }
 
 /* cartlist start */
 .container-cart{
   display: flex;
-  align-items: center;
+
   justify-content: space-around;
   display: none;
+ 
   
 }
 
 .cartlistarea{
   /* border:2px solid black; */
-  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
   margin-top:40px;
   height:auto;
+  overflow-y: auto;
   padding:20px;
   width:70%;  
   border-radius: 20px;
+  background-color: #338b33;
 }
 .billingarea{
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   margin-top: 40px;
-  height:300px;
+  height:50vh;
   padding:20px;
-  width:20%;  
+  width:auto;  
   border-radius: 20px;
+
 }
 table{
   width:100%;
   margin: auto auto;
+
 }
+
 td,th,tr{
   text-align: left;
   padding:5px;
 }
+th{
+  color:white;
+}
+td{
+  font-weight: 600;
+}
+
 td img{
   display: block;
   margin: 0 auto;
@@ -67,15 +80,16 @@ display: flex;
 align-items: center;
 justify-content: center;
 font-size: 15px;
-color:#83AE45;
-border:2px solid #83AE45;
+color:black;
+border:2px solid black;
 
 }
 
 .decreasebtn:hover,.increasebtn:hover,.removebtn:hover{
-background-color: #83AE45;
-color: white;
+background-color: white;
+color:#83AE45;
 cursor: pointer;
+border:2px solid white;
 
 }
 /* quantity button */
@@ -94,10 +108,19 @@ margin:0px 10px;
 background-color: transparent;
 padding:15px;
 border-radius: 20px;
-color:#83AE45;
-border:2px solid #83AE45;
+color:white;
+border:2px solid white;
 transition: ease .4s;
 }
+.fa-trash{
+  color:#a70606;
+  cursor:pointer;
+}
+.fa-trash:hover{
+  color:#820608;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
 
 /* billing area */
 .billingarea div{
@@ -105,7 +128,10 @@ transition: ease .4s;
   align-items: center;
   justify-content: space-around;
   flex-direction: row;
-  width: 200px;
+  width: 250px;
+  margin:5px auto;
+
+
 }
 .container-cart .billingarea hr{
   margin-top:20px;
@@ -118,20 +144,27 @@ transition: ease .4s;
   margin-top: 20px;
 }
 
-.container-cart .billingarea .proceedbtn{
-  border: 2px solid #83AE45;
-  margin: 20px auto;
+
+.proceedbtn{
+  border:2px solid #338b33;
+  margin-left:auto;
+  margin-right: auto;
   padding:10px;
-  border-radius: 20px;
-  font-size: 18px; 
-  color:#83AE45
+  border-radius: 15px;
+  margin-top: 10px;
+  color:#338b33
 }
 .container-cart .billingarea .proceedbtn:hover{
-  background-color: #83AE45;
+  background-color: #338b33;
   color:white;
   cursor: pointer;
 }
 
+
+.proceedbtn:hover::after{
+  transform: scaleX(0);
+
+}
 
 /* empty cart */
 #emptycart{
@@ -178,19 +211,22 @@ margin-left: 10px;
   background-color: white;
   display:none;
   flex-wrap: wrap;
-  padding:10px;
+  padding:30px;
   overflow: auto;
-  justify-content: center;
+  justify-content: flex-start;
+  border-radius: 10px;
+
 }
 .delivery-address-area::-webkit-scrollbar {
   background-color: transparent;
   width:5px;
+
 }
 .delivery-address-area::-webkit-scrollbar-thumb {
   background-color: #83AE45;
-  height: 5px;
-
-
+  border-radius: 5px;
+  overflow-y: hidden;
+ 
 }
 
 
@@ -218,9 +254,6 @@ margin-left: 10px;
   margin-top: 10px; 
 
 }
-.delivery-address-area-open{
-  display: flex;
-}
 .delivery-address-area .delivery_address:hover{
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 } 
@@ -239,10 +272,10 @@ margin-left: 10px;
 .close-button{
   position: absolute;
   top: 10px;
-  left: 10px;
+  right: 10px;
   cursor: pointer;
   font-size: 25px;
-  color: #555;
+  color: #338b33;
 }
 .close-button:hover{
   color:#83AE45;
@@ -251,115 +284,56 @@ margin-left: 10px;
 
 
 
+/* responsive css */
+@media (min-width:621px) and (max-width:768px){
+  .container-cart {
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+  }
+  .billingarea {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-top: 40px;
+    height: 300px;
+    padding: 20px;
+    width: 70%;
+    border-radius: 20px; 
 
-/* address area start
-.cart-addressarea{
-position: absolute;
-overflow: auto;
-top:0px;
-z-index: 1100;
-background-color: white;
-width:500px;
-left:-500px;
-transition: ease .4s;
-padding:10px;
-height:0vh;
-box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
-
-}
-.cart-address-open{
-left:0px;
-cursor: pointer;
-height:100vh;
-}
-.address-close-btn{
-margin-left: 450px;
-margin-top: 20px;
-font-size: 20px;
-}
-.addaddress-block {
-margin-bottom: 20px;
-padding:10px;
+ }
+ 
 }
 
-#addressInput {
-width: 100%;
-margin-bottom: 10px;
-}
-#addAddressButton {
-padding: 8px 16px;
-background-color: #4CAF50;
-color: white;
-border: none;
-cursor: pointer;
-border-radius: 5px;
+@media (min-width:769px) and (max-width:1024px){
+  .container-cart {
+    display: flex;
+   flex-direction: column;
+   align-items: center;
+  }
+  .billingarea {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-top: 40px;
+    height: 300px;
+    padding: 20px;
+    width: 70%;
+    border-radius: 20px; 
+ }
 }
 
-#addAddressButton:hover {
-background-color: #45a049;
-}
-
-.youraddress-viewblock {
-padding: 10px;
-border-top: 1px solid #ccc;
-
-}
-.youraddress-viewblock div{
-padding:10px;
-height:auto;
-width:auto;
-}
-.address {
-margin-bottom: 20px;
-box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.address .button-container {
-display: flex; 
-}
-.address .edit-button{
-border: 2px solid black;
-margin:5px 10px;
-width:80px;
-padding:5px;   
-background-color: transparent;
-color:#45a049;
-border: 2px solid #45a049;
-border-radius: 20px;
-transition: ease .4s;;
-
-}
-.address .delete-button{
-border: 2px solid black;
-margin:5px 10px;
-width:80px;
-padding:5px;   
-background-color: transparent;
-color:#ce3420;
-border: 2px solid #ce3420;
-border-radius: 20px;
-transition: ease .4s;
-}
-.address .delete-button:hover{
-background-color: #ce3420;
-color:white;
-cursor: pointer;
-}
-.address .edit-button:hover{
-background-color: #45a049;
-color:white;
-cursor: pointer;
-}
-.address .delivery-button{
-border: 2px solid black;
-margin:5px 10px;
-width:100px;
-padding:5px;   
-background-color: transparent;
-color:#45a049;
-border: 2px solid #45a049;
-transition: ease .4s;;
-}
-.address .delivery-button:hover{
-background-color: #45a049;
-color:white;
+/* @media (min-width:1025px) and (max-width:1200px){
+  .container-cart {
+    display: flex;
+   flex-direction: column;
+  }
+  .billingarea {
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    margin-top: 40px;
+    height: 300px;
+    padding: 20px;
+    width: 70%;
+    border-radius: 20px; 
+ }
 } */
+
+
+
+
