--- a/Cssfiles/styles.css
+++ b/Cssfiles/styles.css
@@ -1,18 +1,20 @@
 *, *:before, *:after{
-    margin: 0;
-    padding: 0;
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing:border-box;
-    box-sizing: border-box;
-  }
-html{
-  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing:border-box;
+  box-sizing: border-box;
 }
+html{
+scroll-behavior: smooth;
+}
+
+
 
 
 /* navigation bar starts */
 .navbar{
-  height:100px;
+  height:120px;
   width:100%;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
   display: flex;
@@ -36,8 +38,8 @@ html{
   
 }
 .logoimg{
-  max-height: 100px;
-  max-width:100px;
+  max-height: 130px;
+  max-width:130px;
 }
 /* logo div box end */
 
@@ -62,9 +64,12 @@ html{
 
 li{
   list-style: none;
-  margin: 0px 50px;
+  margin: 0 20px; /* Adjusted margin */
   font-size: 18px;
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  width: 120px; /* Fixed width for the li elements */
+  overflow: hidden; /* Ensure that long usernames are hidden */
+
 }
 a{
   font-weight: 500;
@@ -100,6 +105,15 @@ a:hover::after{
 .fa-user{
   font-size: 25px;
 }
+
+.username {
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden; /* Hide overflow */
+  text-overflow: ellipsis; /* Display ellipsis (...) when text overflows */
+  width:100px;
+  margin-left: -100px;
+  color:#83AE45
+}
 #cartlistcount{
   position: absolute;
   font-size: 15px;
@@ -113,152 +127,13 @@ a:hover::after{
   justify-content: center;
   align-items: center;
 }
-
-
-.sub-menu-wrap {
-  position: absolute;
-  max-height: 0;
-  width: 300px;
-  right: 10px;
-  top: 100px;
-  background-color: #32323190;
-  border-radius: 0px;
-  overflow: hidden; 
-  transition: max-height  ease 0.6s;
-  box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
+.hamburg{
+  display:none;
 }
-.sub-menu-wrap.open-menu {
-  top:100px;
-  max-height:400px;
-
- 
+.nav-links-container{
+  display: none;
 }
-.sub-menu{
-  height:90%;
-  width:95%;
-  margin:auto auto;
-}
-.user-info{
-  height:auto;
-  width:100%;
-  display: flex;
-  align-items: center;
-  padding:5px;
-  margin-top:10px;
-}
-.user-info img{
-  height:50px;
-  width:50px;
-  border-radius: 50%;
-  margin: 0px 10px;
-}
-.user-info p{
-  overflow-x:hidden;
-  font-size: 18px;
-  color:white;
-}
-.editprofile{
-  display: flex;
-  align-items: center;
-  flex-direction: row;
-  margin: 10px 10px;
-}
-.editprofile .fa-user,.editprofile .fa-boxes-packing
-,.editprofile .fa-right-to-bracket{
-  margin:10px;
-  color:white;
-}
-.editprofile p{
-  margin: 20px;
-  color:white;  
-}
-
-/* navigation bar end */
-
-
-
-
-
-
-
-
-
- /* container1 start */
- #container1{
-    height:80vh;
-    width:100%;
-    margin-top:10px;
- 
-}
-.homeimage{
-    height:80vh;
-    width:100%;
-}
-/* container1 end */
-
-/*  core values start*/
-.headings{
-    text-align: center;
-}
-#container2{
-    height:auto;
-    width:100%;
-
-    margin-top:50px;
-    padding:20px;
-}
-.corevalues-container{
-
-  height:auto;
-  padding:20px;
-  width:100%;
-  display:flex;
-  align-items: center;
-  justify-content: space-around;
-  flex-direction: row;
-}
-.corevalues {
-  position: relative;
-
-}
-.image {
-  display: block;
-  width:180px;
-  height: 180px;
-  margin-bottom:30px;
-  padding:20px;
-}
-.overlay {
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  padding:20px;
-  overflow: hidden;
-  width: 180px;
-  height: 0px;
-  transition: .5s ease;
-
-}
-.corevalues:hover .overlay {
-  height: 100%;
-  background-color: #82ae45da;
-  font-weight: bold;
-
-}
-
-.text {
-  color: rgb(8, 7, 7);
-  font-size: 18px;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  -webkit-transform: translate(-50%, -50%);
-  -ms-transform: translate(-50%, -50%);
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-/* core values end point */
+/* navbar end */
 
 #container3{
   height:auto;
@@ -268,69 +143,651 @@ a:hover::after{
   align-items: center;
   justify-content: space-around;
   flex-wrap: wrap;
+ margin-top:120px;
+ background-color:#338b33;
+
 }
 #container3 div{
   height:300px;
   width:30%;
   margin:15px 0px;
+  overflow: hidden;
+  box-shadow: rgba(0, 0, 0, 0.25) 0px 14px 28px, rgba(0, 0, 0, 0.22) 0px 10px 10px;
+  border:8px solid gray;
+  border-radius: 30px;
+  position: relative;
 }
 #container3 div img{
   height:300px;
   width:100%;
 }
-#container3 div img:hover{
+/* #container3 div img:hover{
+ 
+} */
+#container3 div:hover img{
   transform: scale(1.1);
+  transition: ease .4s;
 }
-#container3 div:nth-child(2){
+.pnames{
+  position: absolute;
+  top:-2px;
+  left:-2px;
+  border:2px solid black;
+  padding:8px;
+  background-color: #338b33;
+  color:white;
+  border: #338b33;
+  border-bottom-right-radius: 30px;
+  width:120px;
+  text-align: center;
+}
+
+
+/* most selling items container start*/
+.sellingItemscontainer{
+
+  padding:10px;
+  height:55vh;
+  margin-top: 20px;
+}
+.sellingItemscontainer h2{
+  text-align: center;
+  font-size: 28px;
+}
+.sellingproduct-container{
+  height:90%;
+  width:90vw;
+
+  margin:10px auto;
+  display: flex;
+  padding-top:30px;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.sellingproduct-card{
+  width:20vw;
+  height:70%;
+  border-radius: 15px;
+  position: relative;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+
+}
+.sellingproduct-card img{
+  width:20vw;
+  height:100%;
+  border-radius: 15px;
+  filter: grayscale(50%); 
+  transition: filter 0.5s ease;
+  transition: transform 0.5s ease;
+
+  /* opacity: 0.7; */
+}
+.sellingproduct-card img:hover{
+  filter: grayscale(0%);  
+}
+
+
+.price-info{
+  position: absolute;
+  background-color: #83AE45;
+  height:120px;
+  width:100px;
+  top:90%;
+  width:17vw;
+  left:1vw;
+  right:1vw;
+  border-radius: 20px;
+  margin: auto auto;
   display: flex;
   align-items: center;
-  justify-content: center;
   flex-direction: column;
+  justify-content:space-around ;
 }
-#container3 div:nth-child(2) a{
-  padding:10px;
-  width:150px;
-  text-align: center;
-  margin-top: 10px;
-  color:#83AE45;
-  border-radius: 10px;
-  cursor: pointer;
-  font-size: 20px;
+.price-info p:nth-child(1){
+  color:white;
+}
+.price-info p:nth-child(2){
+  color:black;
   font-weight: 600;
+  background-color: white;
+  padding: 10px;
+  width: 100px;
+  text-align: center;
+  border-radius: 15px;
 }
+.price-info p:nth-child(3){
+  font-size: 20px;
+  color: white;
+  cursor: pointer;
+}
+.price-info p:nth-child(4){
+  display: none;
+}
+
+
+
+/* most selling items container end */
+
+
 
 /* footer starting point */
 footer{
-    height:300px;
-    width:100%;
-    margin-top:100px;
-    display:flex;
-    align-items: center;
-    background-color: #F1F1F1;
-  }
+  height:auto;
+  width:100%;
+  margin-top:100px;
+  display:flex;
+  align-items: center;
+  background-color: #338b33;
+  display: flex;
+  align-items: center;
+
+  flex-direction: row;
+
+
+}
+
+.footer__container{
+  margin:auto auto;
  
-  .footer__container{
-    margin:auto auto;
+  width:40%;
+  padding:10px;
+  height:100%;
 
-    width:90%;
-    padding:10px;
+}
+.footer__title,.footer__copy{
+  text-align: center;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.footer__description{
+  text-align: center;
+}
+.footer__social{
+  margin:15px auto;
+  width:20%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  padding:5px;
+}
+.footer__social a::after{
+height:0px 
+}
+
+
+.contact_form{
+  height:100%;
+  width:60%;
+  padding:10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+ 
+}
+.contact_form input{
+  height:5vh;
+
+  border:none;
+  outline: none;
+  border-bottom: 2px solid white;
+  background-color: #338b33;
+}
+.contact_form input[type="text"],.contact_form input[type="email"]{
+  text-align: left;
+  color:white;
+}
+
+.contact_form input::placeholder{
+  text-align: left;
+  color:white;
+}
+.contact_form button{
+  padding:5px;
+  width:40%;
+  background-color: transparent;
+  border-radius: 10px;
+  border: 2px solid #83AE45;
+  color:white;
+  background-color: #83AE45;
+  cursor: pointer;
+  margin:20px auto;
+}
+.contact_form button:hover{
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+textarea{
+  border:none;
+  outline: none;
+  border-bottom: 2px solid white;
+  background-color: #338b33;
+  outline:none;
+  color:white
+}
+textarea::placeholder{
+  color:white;
+}
+
+
+
+/* footer end point */
+
+
+
+
+
+
+
+
+
+
+
+
+/* Responsives Styles */
+
+@media (min-width: 320px) and (max-width:480px) {
+  .logo {
+      width: 250px;
+      padding-left:0px;
   }
-  .footer__title,.footer__copy{
-    text-align: center;
-    margin-top: 20px;
-    margin-bottom: 20px;
+  .logoimg {
+      max-height: 70px;
+      min-width: 70px;
+     
   }
-  .footer__description{
-    text-align: center;
+  .navlinks {
+     display:none;
   }
-  .footer__social{
-    margin:15px auto;
-    width:20%;
-    display: flex;
+  .hamburg{
+      display:block;
+  }
+  .fa-bars{
+      font-size: 30px;    
+  }
+  .fa-xmark{
+      font-size: 30px;
+  }
+  .expand-navbar{ 
+      height:0px;
+      width:100px;
+      position: absolute;
+      left:0;
+      top:120px;
+      width:100%;
+      background-color: white;
+      transition: height .4s;
+      box-shadow: rgba(0, 0, 0, 0.15) 0px 1.95px 2.6px;
+  }
+  .expand-navbar.expand-navbar-open{
+      height:250px;
+  }
+  .nav-links-container{
+      height:650px;
+      width:90%;
+      margin:10px auto;
+      display:none;
+      align-items: center;
+      flex-direction: column;
+      
+  }
+  .nav-links-container a{
+      padding:10px;
+      font-size: 20px;
+      width:100%;
+  }
+  .nav-links-container a:hover{
+      background-color: #83AE45;
+      color:white;
+  }
+
+  /*navbar end */
+  #container3 {
+      flex-direction: column;
+  }
+  #container3 div {
+      width: 90%;
+  }
+  .sellingproduct-container {
+      height: auto;
+      padding: 20px;
+      flex-direction: column;
+      justify-content: center;
+      align-items: center;
+  }
+  .sellingproduct-card {
+      width: 90%;
+      height: 70%;
+      margin-bottom: 130px;
+  }
+  .sellingproduct-card img {
+      width: 100%;
+  }
+  .price-info {
+      height: 80px;
+      width: 50vw;
+      border-radius: 20px;  
+  }
+  .price-info p:nth-child(2) {
+      padding: 5px;
+      width: 80px;  
+  }
+  .sellingItemscontainer h2 {
+      text-align: center;
+      font-size: 20px;
+  }
+  footer{
+      flex-direction:column-reverse;
+      margin-top:120vh;
+  }
+    .contact_form {
+      height: 100%;
+      width: 90%;
+  }
+  .contact_form button {
+      margin: 20px auto;
+  }
+  .footer__container {
+      width: 90%;
+  }
+  .footer__social {
+      width: 60%;
+  }
+}
+
+  @media (min-width: 481px) and (max-width:620px) {
+    .navbar {
+      justify-content: space-between;
+   
+  }
+    .logo {
+      width: 140px;
+      padding-left:10px;
+   
+    }
+    .logoimg {
+      max-height: 100px;
+      min-width: 100px;
+     
+    }
+    .navlinks {
+     display:none;
+    }
+    .hamburg{
+      display:block;
+      padding:20px;
+    }
+    .fa-bars{
+      font-size: 40px;   
+ 
+    }
+    .fa-xmark{
+      font-size: 30px;
+    }
+    .expand-navbar{ 
+      height:0px;
+      width:100px;
+      position: absolute;
+      left:0;
+      top:120px;
+      width:100%;
+      background-color: white;
+      transition: height .4s;
+      box-shadow: rgba(0, 0, 0, 0.15) 0px 1.95px 2.6px;
+  }
+  .expand-navbar.expand-navbar-open{
+      height:250px;
+  }
+  .nav-links-container{
+      height:650px;
+      width:90%;
+      margin:10px auto;
+      display:none;
+      align-items: center;
+      flex-direction: column;
+      
+  }
+  .nav-links-container a{
+      padding:10px;
+      font-size: 20px;
+      width:100%;
+  }
+  .nav-links-container a:hover{
+      background-color: #83AE45;
+      color:white;
+  }
+  #container3 {
+    flex-direction: column;
+}
+#container3 div {
+    width: 90%;
+}
+.sellingproduct-container {
+    height: auto;
+    padding: 20px;
+    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    justify-content: space-around;
-    padding:5px;
+}
+.sellingproduct-card {
+    width: 90%;
+    height: 70%;
+    margin-bottom: 130px;
+}
+.sellingproduct-card img {
+    width: 100%;
+}
+.price-info {
+    height: 80px;
+    width: 50vw;
+    border-radius: 20px;  
+}
+.price-info p:nth-child(2) {
+    padding: 5px;
+    width: 80px;  
+}
+.sellingItemscontainer h2 {
+    text-align: center;
+    font-size: 20px;
+}
+footer{
+    flex-direction:column-reverse;
+    margin-top:160vh;
+}
+  .contact_form {
+    height: 100%;
+    width: 90%;
+}
+.contact_form button {
+    margin: 20px auto;
+}
+.footer__container {
+    width: 90%;
+}
+.footer__social {
+    width: 60%;
+}
+}
+
+@media (min-width: 621px) and (max-width:768px) {
+  .logoimg {
+    max-height: 90px;
+    max-width: 90px;
   }
+ li {
+  margin: 0 22px;
+  font-size: 14px;
+  width: 50px;
+}
+.username {
+  width: 50px;
+  margin-left: -40px;
+
+}
+.fa-user{
+  font-size: 18px;
+}
+.fa-cart-shopping{
+  font-size: 30px;
+}
+#cartlistcount {
+  top: -15px;
+  right: 5px;
+
+}
+#container3 div {
+  height: 230px;
+  width: 30%;
+}
+.sellingproduct-card {
+width: 25vw;
+}
+.sellingproduct-card img {
+width: 25vw;
+/* opacity: 0.7; */
+}
+.sellingproduct-card img {
+width: 25vw;
+/* opacity: 0.7; */
+}
+.price-info {
+height: 80px;
+width: 20vw;
+}
+.price-info p:nth-child(2) {
+padding: 6px;
+width: 80px;
+}
+footer h2{
+font-size: 20px;
+}
+.contact_form button {
+margin: 10px auto;
+}
+.footer__social {
+width: 50%;
+}
+
+}
 
 
-  /* footer end point */
+@media (min-width: 769px) and (max-width:1024px) {
+  .logoimg {
+    max-height: 90px;
+    max-width: 90px;
+  }
+ li {
+  margin: 0 22px;
+  font-size: 17px;
+  width: 55px;
+}
+.username {
+  width: 50px;
+  margin-left: -40px;
+
+}
+.fa-user{
+  font-size: 23px;
+}
+.fa-cart-shopping{
+  font-size: 35px;
+}
+#cartlistcount {
+  top: -15px;
+  right: 5px;
+
+}
+#container3 div {
+  height: 230px;
+  width: 30%;
+}
+.sellingproduct-card {
+width: 25vw;
+}
+.sellingproduct-card img {
+width: 25vw;
+/* opacity: 0.7; */
+}
+.sellingproduct-card img {
+width: 25vw;
+/* opacity: 0.7; */
+}
+.price-info {
+height: 80px;
+width: 20vw;
+}
+.price-info p:nth-child(2) {
+padding: 6px;
+width: 80px;
+}
+footer h2{
+font-size: 20px;
+}
+.contact_form button {
+margin: 10px auto;
+}
+.footer__social {
+width: 50%;
+}
+}
+
+@media (min-width: 1025px) and (max-width:1200px) {
+  .logoimg {
+    max-height: 90px;
+    max-width: 90px;
+  }
+ li {
+  margin: 0 22px;
+  font-size: 17px;
+  width: 75px;
+}
+.username {
+  width: 50px;
+  margin-left: -40px;
+
+}
+.fa-user{
+  font-size: 23px;
+}
+.fa-cart-shopping{
+  font-size: 35px;
+}
+#cartlistcount {
+  top: -15px;
+  right: 5px;
+
+
+
+}
+#container3 div {
+  height: 230px;
+  width: 30%;
+}
+.sellingproduct-card {
+width: 25vw;
+}
+.sellingproduct-card img {
+width: 25vw;
+/* opacity: 0.7; */
+}
+.sellingproduct-card img {
+width: 25vw;
+/* opacity: 0.7; */
+}
+.price-info {
+height: 80px;
+width: 20vw;
+}
+.price-info p:nth-child(2) {
+padding: 6px;
+width: 80px;
+}
+footer h2{
+font-size: 20px;
+}
+.contact_form button {
+margin: 10px auto;
+}
+.footer__social {
+width: 50%;
+}
+
+}
