--- a/Cssfiles/cartliststyle.css
+++ b/Cssfiles/cartliststyle.css
@@ -206,8 +206,8 @@ margin-left: 10px;
   height:70vh;
   width:60%;
   position: absolute;
-  top:150px;
-  left:100px;
+  top:120px;
+  left:0px;
   background-color: white;
   display:none;
   flex-wrap: wrap;
@@ -300,6 +300,13 @@ margin-left: 10px;
     border-radius: 20px; 
 
  }
+ .delivery-address-area .delivery_address, .delivery-address-area .adddelivery-address {
+  height: auto;
+}
+.delivery-address-area {
+  height: 100vh;
+  left:0px;
+}
  
 }
 
@@ -317,6 +324,14 @@ margin-left: 10px;
     width: 70%;
     border-radius: 20px; 
  }
+ .delivery-address-area .delivery_address, .delivery-address-area .adddelivery-address {
+  height: auto;
+}
+.delivery-address-area {
+  height: 100vh;
+  left:0px;
+}
+
 }
 
 /* @media (min-width:1025px) and (max-width:1200px){
